--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@capacitor-community/barcode-scanner": "^3.0.1",
     "@capacitor/android": "^4.7.0",
     "@capacitor/cli": "^4.7.0",
     "@capacitor/core": "^4.7.0",
